fix(header): show french link on small screen

--- a/src/styles/partials/header.less
+++ b/src/styles/partials/header.less
@@ -97,7 +97,7 @@
 	.french {
 		position: absolute;
 		float: right;
-		margin-top: 20px;
+		margin-top: 15px;
 		font-size: 16px;
 		font-family: @semibold;
 		color: @darkgray;
@@ -106,6 +106,7 @@
 		text-align: right;
 		margin-right: 15px;
 		right: 0;
+		top: 0;
 
 		@media(min-width: 450px) {
 			color: white;
